refactor: remove history and cache features, add user names to feedbacks
- Remove pollution history and search history functionality
- Delete cache-related entities, repositories and DTOs
- Remove Firebase integration and dependencies
- Add userName field to FeedbackItemDto and populate in controllers
- Create appsettings.template.json and update .gitignore
- Add database migration to drop history tables
- Simplify controllers to focus on current data only

--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,9 @@ secrets.json
 firebase-service-account.json
 
 # App settings:
-# Keep appsettings.json (non-sensitive defaults).
-# Ignore environment-specific or local override files.
+# Ignore main appsettings.json (contains sensitive data)
+# Keep appsettings.template.json (template without secrets)
+appsettings.json
 appsettings.Development.json
 appsettings.Local.json
 appsettings.*.local.json
